[package]
name = "baywatch"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
crossterm = "0.27.0"
ratatui = { version = "0.27.0", default-features = false, features = ["crossterm"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
